--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=alltopic
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/authbook
+spring.datasource.username=root
+spring.datasource.password=Sarala@06
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=8089
+spring.jpa.properties.hibernate.format_sql=true
+
